Webkit incorrectly setting visibilityState to "prerender" when opening link in new tab https://bugs.webkit.org/show_bug.cgi?id=215851 <rdar://problem/67817100>

Reviewed by Geoff Garen.

Source/WebCore:

Drop "prerender" state from VisibilityState. It has been dropped from the specification
and other browser engines so it is confusing to developers:
- https://www.w3.org/TR/page-visibility-2/#visibility-states-and-the-visibilitystate-enum

* dom/VisibilityState.h:
* dom/VisibilityState.idl:
* page/Page.cpp:
(WebCore::Page::visibilityState const):

Source/WebKit:

* Shared/API/c/WKSharedAPICast.h:
(WebKit::toVisibilityState):
* WebProcess/InjectedBundle/API/gtk/DOM/WebKitDOMDocumentGtk.cpp:
(webkit_dom_document_get_visibility_state):

Source/WebKitLegacy/mac:

* DOM/DOMDocument.mm:
(-[DOMDocument visibilityState]):
* WebView/WebView.mm:
(kit):

Tools:

Add API test coverage.

* TestWebKitAPI/TestWebKitAPI.xcodeproj/project.pbxproj:
* TestWebKitAPI/Tests/WebKitCocoa/VisibilityState.mm: Added.
(TEST):
* WebKitTestRunner/InjectedBundle/TestRunner.cpp:
(WTR::TestRunner::setPageVisibility):

LayoutTests:

Drop dead code in test for prerender.

* fast/events/page-visibility-transition-test.html:


Canonical link: https://commits.webkit.org/231446@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@269665 268f45cc-cd09-0410-ab3c-d52691b4dbfc